@@ -101,4 +101,5 @@ BUGFIXES FROM BUGZILLA:
 090 ==> 373605 - Failed to update database schema from version 7 to version 8.
 091 ==> 286492 - MIGRATION : two SQLITE triggers applied for the same table is not supported by MySQL database.
 092 ==> 316690 - MIGRATION : Database conversion by default successfully erases all data.
-093 ==> 
+093 ==> 387326 - Send by Mail has no "Close" button, only "Finish" (disabled) and "Back".
+094 ==> 
